--- a/src/Neo4J.ipynb
+++ b/src/Neo4J.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "d9d5b50a",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "c7e488b2",
    "metadata": {},
    "outputs": [],
@@ -66,8 +66,9 @@
     "            \n",
     "    @staticmethod\n",
     "    def _create_skills(tx, csv_path):\n",
-    "        assert \"http\" in csv_path, \"Loading csv files from local is \\\n",
-    "        not possible due to security reasons, please use online files.\" \n",
+    "        assert \"http\" in csv_path, \"For security reasons, you must host \\\n",
+    "        your .csv file on a publicly accessible HTTP or HTTPS server. \\\n",
+    "        Examples of such servers include GitHub, Google Drive, and Dropbox.\" \n",
     "        query = (\n",
     "            \"LOAD CSV WITH HEADERS FROM $csv_path AS skill \\\n",
     "            CREATE (:Skill {concept_uri: skill.concept_uri, \\\n",
@@ -99,8 +100,9 @@
     "            \n",
     "    @staticmethod\n",
     "    def _create_courses(tx, csv_path):\n",
-    "        assert \"http\" in csv_path, \"Loading csv files from local is \\\n",
-    "        not possible due to security reasons, please use online files.\" \n",
+    "        assert \"http\" in csv_path, \"For security reasons, you must host \\\n",
+    "        your .csv file on a publicly accessible HTTP or HTTPS server. \\\n",
+    "        Examples of such servers include GitHub, Google Drive, and Dropbox.\" \n",
     "        query = (\n",
     "            \"LOAD CSV WITH HEADERS FROM $csv_path AS course \\\n",
     "            CREATE (:Course {course_id: course.course_id, \\\n",
@@ -128,6 +130,9 @@
     "    \n",
     "    @staticmethod\n",
     "    def _create_relations(tx, csv_path):\n",
+    "        assert \"http\" in csv_path, \"For security reasons, you must host \\\n",
+    "        your .csv file on a publicly accessible HTTP or HTTPS server. \\\n",
+    "        Examples of such servers include GitHub, Google Drive, and Dropbox.\"         \n",
     "        query = (\n",
     "            \"LOAD CSV WITH HEADERS FROM $csv_path AS relation \\\n",
     "            MERGE (course:Course {course_id: relation.course_id}) \\\n",
@@ -181,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "3543a20b",
    "metadata": {},
    "outputs": [],
@@ -192,13 +197,18 @@
     "    user = \"neo4j\"\n",
     "    password = \"3bO4Zwc9eYOyZBQ_CHE49lqd7NKeLSySJAq4flxUtAA\"\n",
     "    app = App(uri, user, password)\n",
-    "    # create skill nodes from skill dataset\n",
-    "    app.create_skills(\"https://raw.githubusercontent.com/ingastrelnikova/awt-pj-ss22-learn-tech-2/main/data/all_skills.csv\")\n",
-    "    # create course nodes based on course dataset\n",
-    "    app.create_courses(\"https://raw.githubusercontent.com/ingastrelnikova/awt-pj-ss22-learn-tech-2/main/data/all_courses.csv\")\n",
-    "    # create relationships between courses and skills based on results from two different NLP algorithms\n",
-    "    app.create_relations(\"https://raw.githubusercontent.com/ingastrelnikova/awt-pj-ss22-learn-tech-2/main/data/all_relations_ER.csv\")\n",
-    "    app.create_relations(\"https://raw.githubusercontent.com/ingastrelnikova/awt-pj-ss22-learn-tech-2/main/data/all_relations_NN.csv\")\n",
+    "    get_google_file = lambda url: 'https://drive.google.com/uc?id=' + url.split('/')[-2]\n",
+    "#     # create skill nodes from skill dataset\n",
+    "#     app.create_skills(get_google_file(\n",
+    "#         \"https://drive.google.com/file/d/1f3XZzWqKp0ZjVjc7HspdQBWtJNyX1Ycr/view?usp=sharing\"))\n",
+    "#     # create course nodes based on course dataset\n",
+    "#     app.create_courses(get_google_file(\n",
+    "#         \"https://drive.google.com/file/d/1B7cCqpFYYYT51bm0o2lf_etRruXeIx5o/view?usp=sharing\"))\n",
+    "#     # create relationships between courses and skills based on results from two different NLP algorithms\n",
+    "#     app.create_relations(get_google_file(\n",
+    "#         \"https://drive.google.com/file/d/18dS238Oy6KaOx7gf8qR1KxDLK2C_0lTh/view?usp=sharing\"))\n",
+    "#     app.create_relations(get_google_file(\n",
+    "#         \"https://drive.google.com/file/d/1-zyXJV_t0XHUlHm6-loxPUOLSMyFEq3L/view?usp=sharing\"))\n",
     "#     # create a relationship between one course to one skill provided by user\n",
     "#     app.create_relation(\"4A873264-7ADD-DE47-3039-1FDA692E8164\",\n",
     "#                         \"http://data.europa.eu/esco/skill/8330c86e-63cf-4be6-849f-4f77628cc5c5\")\n",
