--- a/src/NLP.ipynb
+++ b/src/NLP.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 147,
    "id": "34f704ec",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 148,
    "id": "f0a8e6d8",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "Name: processed_label, Length: 13891, dtype: object"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 149,
    "id": "4dfa3961",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "Name: info, Length: 13891, dtype: object"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 150,
    "id": "c2bde99d",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "Name: course_info_ER, dtype: object"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 151,
    "id": "38a7d63a",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "Name: course_info_NN, dtype: object"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 152,
    "id": "91eafb65",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████| 13891/13891 [00:48<00:00, 288.89it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████| 13891/13891 [00:50<00:00, 277.75it/s]\n"
      ]
     }
    ],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 153,
    "id": "256c69e2",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "[12127 rows x 2 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 154,
    "id": "1286455b",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████| 13891/13891 [00:46<00:00, 299.48it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████| 13891/13891 [00:48<00:00, 289.33it/s]\n"
      ]
     }
    ],
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 155,
    "id": "636ef1b3",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "[13882 rows x 2 columns]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 156,
    "id": "a277871c",
    "metadata": {},
    "outputs": [],
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 157,
    "id": "d141923d",
    "metadata": {},
    "outputs": [],
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 139,
    "id": "a3090b3a",
    "metadata": {},
    "outputs": [
@@ -640,7 +640,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████| 28/28 [02:59<00:00,  6.41s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 28/28 [03:10<00:00,  6.79s/it]\n"
      ]
     }
    ],
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 140,
    "id": "4054c6ee",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
        "        -0.02515756,  0.03830037]], dtype=float32)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 158,
    "id": "54721cd6",
    "metadata": {},
    "outputs": [],
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 161,
    "id": "1e713838",
    "metadata": {},
    "outputs": [],
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 143,
    "id": "899bdb3b",
    "metadata": {},
    "outputs": [],
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 144,
    "id": "012db23f",
    "metadata": {},
    "outputs": [],
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 145,
    "id": "6703729b",
    "metadata": {},
    "outputs": [
@@ -839,7 +839,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████| 19/19 [00:00<00:00, 69.26it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████| 16852/16852 [04:17<00:00, 65.50it/s]\n"
      ]
     },
     {
@@ -870,220 +870,92 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Experte im Prozessmanagement</td>\n",
-       "      <td>Arbeitsmarkt</td>\n",
+       "      <td>Aktuelles Arbeitsrecht 2022</td>\n",
+       "      <td>Arbeitsrecht</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Experte im Prozessmanagement</td>\n",
-       "      <td>sich selbst darstellen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Experte im Prozessmanagement</td>\n",
-       "      <td>andere führen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Experte in Investition und Finanzierung</td>\n",
-       "      <td>Arbeitsmarkt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Experte in Investition und Finanzierung</td>\n",
-       "      <td>sich selbst darstellen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Experte in Investition und Finanzierung</td>\n",
-       "      <td>Finanzmärkte</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Experte in Unternehmensaufbau und Organisation</td>\n",
-       "      <td>Arbeitsmarkt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Experte in Unternehmensaufbau und Organisation</td>\n",
-       "      <td>Marktanalyse</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Experte in Unternehmensführung</td>\n",
-       "      <td>Arbeitsmarkt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Experte in Unternehmensführung</td>\n",
-       "      <td>sich selbst darstellen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Experte in Unternehmensführung</td>\n",
-       "      <td>andere führen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Experte in Unternehmensführung</td>\n",
-       "      <td>Mitarbeiter führen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>IT-Projektmanagement</td>\n",
-       "      <td>Arbeitsmarkt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>IT-Projektmanagement</td>\n",
-       "      <td>sich selbst darstellen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>IT-Projektmanagement</td>\n",
-       "      <td>andere führen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>IT-Projektmanagement</td>\n",
-       "      <td>Finanzmanagement</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>IT-Projektmanagement</td>\n",
+       "      <td>Ambulante Pflege - Rechtssicher Handeln und Ha...</td>\n",
        "      <td>Risikomanagement</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>PHP Programmierer und Datenbankentwickler</td>\n",
-       "      <td>PHP</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Ambulante Pflege - Rechtssicher Handeln und Ha...</td>\n",
+       "      <td>Datenschutz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>PHP Programmierer und Datenbankentwickler</td>\n",
-       "      <td>WordPress</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Aufgaben des gesetzlichen Betreuers - Zur Refo...</td>\n",
+       "      <td>planen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Programmierung PHP Frameworks: Laravel, Symfon...</td>\n",
-       "      <td>PHP</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Programmierung PHP Frameworks: Laravel, Symfon...</td>\n",
-       "      <td>WordPress</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Shopsystem Administrator</td>\n",
-       "      <td>Geschäftsprozesse</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Shopsystem Administrator</td>\n",
-       "      <td>Web-Analyse</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Starte jetzt: Heranführung an die selbstständi...</td>\n",
-       "      <td>Beratung</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Vermarktungsstrategien online und offline</td>\n",
-       "      <td>Arbeitsmarkt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Vermarktungsstrategien online und offline</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Aufgaben des gesetzlichen Betreuers - Zur Refo...</td>\n",
        "      <td>sich selbst darstellen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Webentwicklung 2.0 - HTML5, CSS3, WordPress</td>\n",
-       "      <td>WordPress</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Webentwicklung 2.0 - HTML5, CSS3, WordPress</td>\n",
-       "      <td>Kommunikation</td>\n",
+       "      <th>25545</th>\n",
+       "      <td>Conversion und Usability Experte</td>\n",
+       "      <td>Suchmaschinenoptimierung</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Webentwicklung 2.0 - HTML5, CSS3, WordPress</td>\n",
-       "      <td>Entscheidungen treffen</td>\n",
+       "      <th>25546</th>\n",
+       "      <td>Digital Transformation Management</td>\n",
+       "      <td>Design Thinking</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Webentwicklung 2.0 - HTML5, CSS3, WordPress</td>\n",
-       "      <td>CSS</td>\n",
+       "      <th>25547</th>\n",
+       "      <td>Experte im Digital Content Creation</td>\n",
+       "      <td>Psychologie</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Zukunftswert Mensch: tiefgreifend-wirksame ind...</td>\n",
-       "      <td>Arbeitsmarkt</td>\n",
+       "      <th>25548</th>\n",
+       "      <td>Experte im Digital Content Creation</td>\n",
+       "      <td>Waren sichern</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>Weiterbildung Wildnispädagogik</td>\n",
-       "      <td>andere führen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>Qualifizierung zur Anerkennung für Erzieher*in...</td>\n",
-       "      <td>Erste Hilfe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>Digitales spielbasiertes Lernen - Einsatzmögli...</td>\n",
-       "      <td>Mathematik</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>Fernlehrgang Fortbildung Aufmaßtechniker*in (ZAB)</td>\n",
-       "      <td>Geometrie</td>\n",
+       "      <th>25549</th>\n",
+       "      <td>Experte im Digital Content Creation</td>\n",
+       "      <td>Fotografie</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>25550 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                          course_name             skill_label\n",
-       "0                        Experte im Prozessmanagement            Arbeitsmarkt\n",
-       "1                        Experte im Prozessmanagement  sich selbst darstellen\n",
-       "2                        Experte im Prozessmanagement           andere führen\n",
-       "3             Experte in Investition und Finanzierung            Arbeitsmarkt\n",
-       "4             Experte in Investition und Finanzierung  sich selbst darstellen\n",
-       "5             Experte in Investition und Finanzierung            Finanzmärkte\n",
-       "6      Experte in Unternehmensaufbau und Organisation            Arbeitsmarkt\n",
-       "7      Experte in Unternehmensaufbau und Organisation            Marktanalyse\n",
-       "8                      Experte in Unternehmensführung            Arbeitsmarkt\n",
-       "9                      Experte in Unternehmensführung  sich selbst darstellen\n",
-       "10                     Experte in Unternehmensführung           andere führen\n",
-       "11                     Experte in Unternehmensführung      Mitarbeiter führen\n",
-       "12                               IT-Projektmanagement            Arbeitsmarkt\n",
-       "13                               IT-Projektmanagement  sich selbst darstellen\n",
-       "14                               IT-Projektmanagement           andere führen\n",
-       "15                               IT-Projektmanagement        Finanzmanagement\n",
-       "16                               IT-Projektmanagement        Risikomanagement\n",
-       "17          PHP Programmierer und Datenbankentwickler                     PHP\n",
-       "18          PHP Programmierer und Datenbankentwickler               WordPress\n",
-       "19  Programmierung PHP Frameworks: Laravel, Symfon...                     PHP\n",
-       "20  Programmierung PHP Frameworks: Laravel, Symfon...               WordPress\n",
-       "21                           Shopsystem Administrator       Geschäftsprozesse\n",
-       "22                           Shopsystem Administrator             Web-Analyse\n",
-       "23  Starte jetzt: Heranführung an die selbstständi...                Beratung\n",
-       "24          Vermarktungsstrategien online und offline            Arbeitsmarkt\n",
-       "25          Vermarktungsstrategien online und offline  sich selbst darstellen\n",
-       "26        Webentwicklung 2.0 - HTML5, CSS3, WordPress               WordPress\n",
-       "27        Webentwicklung 2.0 - HTML5, CSS3, WordPress           Kommunikation\n",
-       "28        Webentwicklung 2.0 - HTML5, CSS3, WordPress  Entscheidungen treffen\n",
-       "29        Webentwicklung 2.0 - HTML5, CSS3, WordPress                     CSS\n",
-       "30  Zukunftswert Mensch: tiefgreifend-wirksame ind...            Arbeitsmarkt\n",
-       "31                     Weiterbildung Wildnispädagogik           andere führen\n",
-       "32  Qualifizierung zur Anerkennung für Erzieher*in...             Erste Hilfe\n",
-       "33  Digitales spielbasiertes Lernen - Einsatzmögli...              Mathematik\n",
-       "34  Fernlehrgang Fortbildung Aufmaßtechniker*in (ZAB)               Geometrie"
+       "                                             course_name  \\\n",
+       "0                            Aktuelles Arbeitsrecht 2022   \n",
+       "1      Ambulante Pflege - Rechtssicher Handeln und Ha...   \n",
+       "2      Ambulante Pflege - Rechtssicher Handeln und Ha...   \n",
+       "3      Aufgaben des gesetzlichen Betreuers - Zur Refo...   \n",
+       "4      Aufgaben des gesetzlichen Betreuers - Zur Refo...   \n",
+       "...                                                  ...   \n",
+       "25545                   Conversion und Usability Experte   \n",
+       "25546                  Digital Transformation Management   \n",
+       "25547                Experte im Digital Content Creation   \n",
+       "25548                Experte im Digital Content Creation   \n",
+       "25549                Experte im Digital Content Creation   \n",
+       "\n",
+       "                    skill_label  \n",
+       "0                  Arbeitsrecht  \n",
+       "1              Risikomanagement  \n",
+       "2                   Datenschutz  \n",
+       "3                        planen  \n",
+       "4        sich selbst darstellen  \n",
+       "...                         ...  \n",
+       "25545  Suchmaschinenoptimierung  \n",
+       "25546           Design Thinking  \n",
+       "25547               Psychologie  \n",
+       "25548             Waren sichern  \n",
+       "25549                Fotografie  \n",
+       "\n",
+       "[25550 rows x 2 columns]"
       ]
      },
      "metadata": {},
@@ -1097,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 162,
    "id": "8a286ee9",
    "metadata": {
     "scrolled": true
@@ -1107,7 +979,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████| 19/19 [00:05<00:00,  3.71it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 19/19 [00:04<00:00,  3.97it/s]\n"
      ]
     },
     {
